syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";

option go_package = "pb/proto/api/v1";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/api/v1/posts"
      body: "*"
    };
  }
  rpc GetPostByID(GetPostByIDRequest) returns (GetPostByIDResponse) {
    option (google.api.http) = {get: "/api/v1/posts/{id}"};
  }
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {
    option (google.api.http) = {get: "/api/v1/posts"};
  }
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = {
      put: "/api/v1/posts/{id}"
      body: "*"
    };
  }
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {
    option (google.api.http) = {delete: "/api/v1/posts/{id}"};
  }
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message CreatePostResponse {
  uint32 id = 1;
}

message GetPostByIDRequest {
  uint32 id = 1;
}

message GetPostByIDResponse {
  uint32 id = 1;
  string title = 2;
  string content = 3;
}

message ListPostsRequest {}

message ListPostsResponse {
  repeated Post posts = 1;

  message Post {
    uint32 id = 1;
    string title = 2;
    string content = 3;
  }
}

message UpdatePostRequest {
  uint32 id = 1;
  string title = 2;
  string content = 3;
}

message UpdatePostResponse {
  uint32 id = 1;
}

message DeletePostRequest {
  uint32 id = 1;
}

message DeletePostResponse {
  uint32 id = 1;
}
